--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!--the class= was removed from the 3 divs because they were no longer needed in the CSS-->
         <!--added alt= to describe the image-->
         <div id="search-engine-optimization">
-            <img src="./images/search-engine-optimization.jpg" alt="Image with laptop, coffe cup, magnifying glass, pen holder with pens all surround a notebook with text 'SEO' to represent search engine optimization" class="float-left" />
+            <img src="./images/search-engine-optimization.jpg" alt="Image with laptop, coffee, pens, notebook with text 'SEO' for search engine optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -50,7 +50,7 @@
         </div>
         <div id="online-reputation-management">
             <!--added alt= to describe the image-->
-            <img src="./images/online-reputation-management.jpg" alt="Image shows person working at laptop with the screen displaying the title 'Reputation' and a graph showing improving curve" class="float-right" />
+            <img src="./images/online-reputation-management.jpg" alt="Image of laptop displaying title 'Reputation' and a graph showing improving curve" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -58,7 +58,7 @@
         </div>
         <div id="social-media-marketing">
             <!--added alt= to describe the image-->
-            <img src="./images/social-media-marketing.jpg" alt="Image showing people sitting around a table holding various pictures related to social media" class="float-left" />
+            <img src="./images/social-media-marketing.jpg" alt="Image showing people sitting around a table holding pictures related to social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
